--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,33 +1,50 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: LIGMATV # Your GitHub organization or username, where this repository lives
+repo: uptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+  - name: website
+    url: https://ligmatv.vercel.app
+  - name: bukumark
+    url: https://bukumark.vercel.app
+  - name: emojibin
+    url: https://emojibin.vercel.app
+  - name: scrrec
+    url: https://scrrec.vercel.app
+  - name: simple-music-visualizer
+    url: https://simplemusicvisualizer.vercel.app
+  - name: simple-css-animation
+    url: https://simplecssanimation.vercel.app
+  - name: shortstock
+    url: https://ligmatv.github.io/Awesome-URL-Shortener
+  - name: pancasila
+    url: https://pancasila.vercel.app
+  - name: copies.js
+    url: https://copies.vercel.app
+  - name: kustomalert.js
+    url: https://kalert.vercel.app
+  - name: cigarettey
+    url: https://xn--b78h.vercel.app
+  - name: 2ools
+    url: https://2ools.vercel.app
+  - name: docsify-navbar-fixed
+    url: https://cdn.jsdelivr.net/gh/LIGMATV/docsify-navbar-fixed/navbar-fixed.css
+  - name: docsify-theme-github
+    url: https://cdn.jsdelivr.net/gh/LIGMATV/docsify-theme-github/github.css
+  - name: docsify-vite-coverpage
+    url: https://cdn.jsdelivr.net/gh/LIGMATV/docsify-vite-coverpage/docsify-vite-coverpage.css
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  # cname: demo.upptime.js.org
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://ligmatv.vercel.app/img/logo.svg
+  name: LIGMATV
+  introTitle: "Hello! Im a *(not)* too excited developer, im just do it for fun in the free time."
+  # introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
-    - title: Status
+    - title: LIGMATV Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
